# affiniscreen

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_CLEAN_RUN.md  activate_amber_md.sh  check_env.py  environment.yml  protonate.py  pyproject.toml  requirements.txt  run_amber.py  run_gui.sh  setup_env.sh  site_config.example.yaml  submit_mmgbsa_for_screen.sh
amber_md/: __init__.py  _dt_guard.py  abfe_integration.py  abfe_openfe_plan.py  abfe_qc.py  abfe_self_heal.py  abfe_self_heal_cli.py  abfe_topology.py  analysis.py  batch.py  batch_aggregate.py  batch_resume.py  boresch.py  boresch_autoselect.py  boresch_restraint.py  builder.py  charge_correction.py  config.py  env.py  equilibration_fepspell.py  fep.py  fep_driver.py  logger.py  md_inputs.py  mdin_validator.py  mmgbsa.py  mmgbsa_openmm.py  mmpbsa_report.py  monitor.py  openfe_plan.py  pipeline.py  preflight_abfe.py  prep.py  prep_ligands.py  prmtop_utils.py  protonation.py  rbfe_map.py  rbfe_topology.py  recovery.py  resume.py  (+9 more)
amber_md/analysis_kit/: build_screen_summary.py  combine_report.py  cpptraj_rmsd_rmsf.in  cpptraj_rmsd_rmsf.in.template  load_pymol.pml  load_pymol.pml.template  load_vmd.tcl  load_vmd.tcl.template  run_analysis.sh  run_screen_analysis.sh
amber_md/gui/: Home.py  __init__.py  amber_campaign.py  amber_config.py  common.py  fep_common.py  openfe_campaign.py  openfe_common.py  openfe_report.py  promote_fep.py  results_lib.py  routing_help.py
amber_md/schedulers/: __init__.py  base.py  lsf.py  slurm.py
docs/: ARCHITECTURE.md  CLEAN_RUN_v2.5.74.md  CONVERGENCE_BUDGET.md  HREMD_NOTES.md  INSTALL.md  USER_MANUAL.md  fep_protocol_patch.md
docs/history/: ABFE_openfe_vs_amber_review.md  CHANGELOG_v2.5.62.md  CHANGELOG_v2.5.63.md  CHANGES_abfe.md  (+112 more)
examples/: README.md  ligands.sdf
tests/: test_abfe_self_heal.py  test_fep_estimator_recovery.py  test_mbar_rank_guard.py  test_recovery_gate.py  test_self_heal_recovery.py
tools/: abfe_resume_guard.sh  abfe_smoke_test.py  analyze_campaign.py  analyze_leg.py  bump_version.py  check_dt_regression.py  check_restraint_leg.py  check_version_sync.py  convergence_analysis.py  lint_run_script.py  restraint_ti_crosscheck.py  sample_heat.in  validate_mdin.py  validate_restraint_leg_inputs.py  verify_stage_order.sh
(+22 files in other folders)
